--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 					<div class="flex flex-2">
 						<article>
 							<div class="image round">
-								<img src="images/2017/2017-01-23 01.49.45 1.jpg" width="100%" alt="Winn"/>
+								<img src="images/2017-01-23 01.49.45 1.jpg" width="100%" alt="Winn"/>
 							</div>
 							<header>
 								<h3>Lorem ipsum<br /> dolor amet nullam</h3>
@@ -80,7 +80,7 @@
 						</article>
 						<article>
 							<div class="image round">
-								<img src="images/just me/2017-01-23 01.34.38 1.jpg" width="100%" alt="Maybe"/>
+								<img src="images/2017-01-23 01.34.38 1.jpg" width="100%" alt="Maybe"/>
 							</div>
 							<header>
 								<h3>Sed feugiat<br /> tempus adipicsing</h3>
