--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 					<div class="flex flex-2">
 						<article>
 							<div class="image round">
-								<img src="images/images/erwin.jpg" width="100%" alt="Winn"/>
+								<img src="images/images/erwin.jpg" alt="Winn"/>
 							</div>
 							<header>
 								<h3>Lorem ipsum<br /> dolor amet nullam</h3>
