--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 						</article>
 						<article>
 							<div class="image round">
-								<img src="images/images/maybe.jpg" width="100%" alt="Maybe"/>
+								<img src="images/images/maybe.jpg" alt="Maybe"/>
 							</div>
 							<header>
 								<h3>Sed feugiat<br /> tempus adipicsing</h3>
