--- a/index.html
+++ b/index.html
@@ -68,26 +68,26 @@
 					<div class="flex flex-2">
 						<article>
 							<div class="image round">
-								<img src="images/images/erwin.jpg" alt="Winn"/>
+								<img src="images/images/erwin.jpg" alt="Winn" width="350" height="350" style="border:solid; border-color:black"/>
 							</div>
 							<header>
-								<h3>Lorem ipsum<br /> dolor amet nullam</h3>
+								<h3></h3>
 							</header>
-							<p>Morbi in sem quis dui placerat ornare. Pellentesquenisi<br />euismod in, pharetra a, ultricies in diam sed arcu. Cras<br />consequat  egestas augue vulputate.</p>
+							<p>Nickname: Maybe</p>
 							<footer>
-								<a href="#" class="button">Learn More</a>
+								<a href="https://www.facebook.com/cabeebe03" target="_blank"><img src="images/fb_logo.png" width="40" height="40" alt=""/></a>
 							</footer>
 						</article>
 						<article>
 							<div class="image round">
-								<img src="images/images/maybe.jpg" alt="Maybe"/>
+								<img src="images/images/maybe.jpg" alt="Maybe" width="350" height="350" style="border:solid; border-color:black"/>
 							</div>
 							<header>
-								<h3>Sed feugiat<br /> tempus adipicsing</h3>
+								<h3></h3>
 							</header>
-							<p>Pellentesque fermentum dolor. Aliquam quam lectus<br />facilisis auctor, ultrices ut, elementum vulputate, nunc<br /> blandit ellenste egestagus commodo.</p>
+							<p>Nickname: Winn</p>
 							<footer>
-								<a href="#" class="button">Learn More</a>
+								<a href="https://www.facebook.com/piyaya.monsteru" target="_blank"><img src="images/fb_logo.png" width="40" height="40" alt=""/></a>
 							</footer>
 						</article>
 					</div>
