--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="index.html" class="logo"><strong>Projection</strong> by TEMPLATED</a>
+					<a href="index.html" class="logo"><strong>Welcome</strong> to Winn and Maybe website!</a>
 					<nav id="nav">
 						<a href="index.html">Home</a>
-						<a href="generic.html">Generic</a>
-						<a href="elements.html">Elements</a>
+						<a href="generic.html">Gallery</a>
+						<a href="elements.html">About</a>
 					</nav>
 					<a href="#navPanel" class="navPanelToggle"><span class="fa fa-bars"></span></a>
 				</div>
