--- a/index.html
+++ b/index.html
@@ -36,27 +36,27 @@
 					<div class="flex ">
 
 						<div>
-							<span class="icon fa-car"></span>
-							<h3>Aliquam</h3>
-							<p>Suspendisse amet ullamco</p>
+							<a href=generic.html><span class="icon fa-car"></span></a>
+							<h3>Travel</h3>
+							<p>Dream places to go.</p>
 						</div>
 
 						<div>
-							<span class="icon fa-camera"></span>
-							<h3>Elementum</h3>
-							<p>Class aptent taciti ad litora</p>
+							<a href=generic.html><span class="icon fa-camera"></span></a>
+							<h3>Gallery</h3>
+							<p>Memories within photos.</p>
 						</div>
 
 						<div>
-							<span class="icon fa-bug"></span>
-							<h3>Ultrices</h3>
-							<p>Nulla vitae mauris non felis</p>
+							<a href=elements.html><span class="icon fa-bug"></span></a>
+							<h3>Hobbies</h3>
+							<p>Chill for a minute before going.</p>
 						</div>
 
 					</div>
 
 					<footer>
-						<a href="#" class="button">Get Started</a>
+						<a href="#three" class="button">Get Started</a>
 					</footer>
 				</div>
 			</section>
