--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<nav id="nav">
 						<a href="index.html">Home</a>
 						<a href="generic.html">Gallery</a>
-						<a href="elements.html">About</a>
+						<a href="elements.html">Hobbies</a>
 					</nav>
 					<a href="#navPanel" class="navPanelToggle"><span class="fa fa-bars"></span></a>
 				</div>
@@ -68,7 +68,7 @@
 					<div class="flex flex-2">
 						<article>
 							<div class="image round">
-								<img src="images/images/erwin.jpg" alt="Winn" width="350" height="350" style="border:solid; border-color:black"/>
+								<img src="images/used/erwin.jpg" alt="Winn" width="350" height="350" style="border:solid; border-color:black"/>
 							</div>
 							<header>
 								<h3></h3>
@@ -80,7 +80,7 @@
 						</article>
 						<article>
 							<div class="image round">
-								<img src="images/images/maybe.jpg" alt="Maybe" width="350" height="350" style="border:solid; border-color:black"/>
+								<img src="images/used/maybe.jpg" alt="Maybe" width="350" height="350" style="border:solid; border-color:black"/>
 							</div>
 							<header>
 								<h3></h3>
