--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 					<a href="index.html" class="logo"><strong>Welcome</strong> to Winn and Maybe website!</a>
 					<nav id="nav">
 						<a href="index.html">Home</a>
-						<a href="generic.html">Gallery</a>
-						<a href="elements.html">Hobbies</a>
+						<a href="gallery.html">Gallery</a>
+						<a href="hobbies.html">Hobbies</a>
 					</nav>
 					<a href="#navPanel" class="navPanelToggle"><span class="fa fa-bars"></span></a>
 				</div>
@@ -76,6 +76,8 @@
 							<p>Nickname: Maybe</p>
 							<footer>
 								<a href="https://www.facebook.com/cabeebe03" target="_blank"><img src="images/fb_logo.png" width="40" height="40" alt=""/></a>
+								<a href="https://www.instagram.com/cabeebe/" target="_blank"><img src="images/insta.png" width="40" height="40" alt=""/></a>
+								<a href="https://www.twitter.com/_cabeebe/" target="_blank"><img src="images/twitter.png" width="40" height="40" alt=""/></a>
 							</footer>
 						</article>
 						<article>
@@ -88,6 +90,8 @@
 							<p>Nickname: Winn</p>
 							<footer>
 								<a href="https://www.facebook.com/piyaya.monsteru" target="_blank"><img src="images/fb_logo.png" width="40" height="40" alt=""/></a>
+								<a href="https://www.instagram.com/systemwin32/" target="_blank"><img src="images/insta.png" width="40" height="40" alt=""/></a>
+								<a href="https://www.twitter.com/winnqwerty/" target="_blank"><img src="images/twitter.png" width="40" height="40" alt=""/></a>
 							</footer>
 						</article>
 					</div>
@@ -98,26 +102,7 @@
 			<footer id="footer">
 				<div class="inner">
 
-					<h3>Get in touch</h3>
-
-					<form action="#" method="post">
-
-						<div class="field half first">
-							<label for="name">Name</label>
-							<input name="name" id="name" type="text" placeholder="Name">
-						</div>
-						<div class="field half">
-							<label for="email">Email</label>
-							<input name="email" id="email" type="email" placeholder="Email">
-						</div>
-						<div class="field">
-							<label for="message">Message</label>
-							<textarea name="message" id="message" rows="6" placeholder="Message"></textarea>
-						</div>
-						<ul class="actions">
-							<li><input value="Send Message" class="button alt" type="submit"></li>
-						</ul>
-					</form>
+<br>
 
 					<div class="copyright">
 						&copy; Untitled. Design: <a href="https://templated.co">TEMPLATED</a>. Images: <a href="https://unsplash.com">Unsplash</a>.
