--- a/hobbies.html
+++ b/hobbies.html
@@ -19,8 +19,8 @@
 					<a href="index.html" class="logo"><strong>Projection</strong> by TEMPLATED</a>
 					<nav id="nav">
 						<a href="index.html">Home</a>
-						<a href="gallery.html">Generic</a>
-						<a href="hobbies.html">Elements</a>
+						<a href="gallery.html">Gallery</a>
+						<a href="hobbies.html">Hobbies</a>
 					</nav>
 					<a href="#navPanel" class="navPanelToggle"><span class="fa fa-bars"></span></a>
 				</div>
